--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TOIWeather</string>
+    <string name="app_name">weather</string>
     <string name="error_message">Something went wrong at our end!</string>
     <string name="error_btn_retry">Retry</string>
     <string name="title_activity_base">BaseActivity</string>
